<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simpleCalculator.r3v3nan7.simpleCalculator.PourcentCalcActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/whatIs"/>

    <EditText
        android:id="@+id/edt_NumberOne"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginLeft="55dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pourcentOf"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="107dp"/>

    <EditText
        android:id="@+id/edt_NumberTwo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginLeft="140dp"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="220dp"/>

    <Button
        android:id="@+id/btnCalcPourcent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="60dp"/>


    <EditText
        android:id="@+id/edt_secondSecNumOne"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="150dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isWhatPercentOf"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="65dp"/>


    <EditText
        android:id="@+id/edt_secondSecNumTwo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="180dp"/>

    <TextView
        android:id="@+id/tvResultSecSection"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="140dp"/>

    <Button
        android:id="@+id/btnCalcPourcentSecSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="220dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/increaseDecreasePercentage"
        android:layout_marginTop="290dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginTop="370dp"
        />


    <EditText
        android:id="@+id/edt_thirdSecNumOne"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="350dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="120dp"
        />

    <EditText
        android:id="@+id/edt_thirdSecNumTwo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="350dp"/>


    <TextView
        android:id="@+id/tvResultThirdSection"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="350dp"/>

    <Button
        android:id="@+id/btnCalcPourcentThirdSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="420dp"/>

</RelativeLayout>